hphp/hack/test/typecheck/must_be_arraykey.php.exp
File "must_be_arraykey.php", line 5, characters 14-22:
Some type arguments violate their constraints (Typing[4323])
  File "hackarray.hhi", line 43, characters 32-32:
  `T` is a constrained type parameter
  File "hackarray.hhi", line 43, characters 37-44:
  This type constraint is violated
  File "hackarray.hhi", line 43, characters 37-44:
  Expected `arraykey`
  File "must_be_arraykey.php", line 5, characters 21-21:
  But got `I`
